# Bobr

./: .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
.bobr/backlog/: feature-artifact-instructions-ai-change.md  feature-bobr-spec-cli-list-show-validate-main-specs.md  feature-change-workflow-new-continue-verify-archive.md  feature-claude-code-plugin-claude-md-skills-hooks-bobr.md  feature-cli-bobr-init-backlog-crud.md  feature-context-generation-bobr-context-generate.md  feature-delta-spec-format-added-modified-removed-renamed.md  feature-delta-spec-parser-markdown-delta-specs-structure.md  feature-delta-specs-change-workflow-specs-change-verify.md  feature-feature-development-workflow-11-guided-workflow.md  feature-intelligent-merge-delta-ops-main-specs-renamed-r.md  feature-main-spec-storage-crud-bobr-specs-name-spec-md.md  feature-mcp-server-read-backlog-get-ready-items-claim-it.md  feature-mcp-tools-specs-read-specs-get-spec-ai.md  feature-openspec-bobr-feature-openspec-cli.md  feature-openspec-openspec-cli-bobr-feature-spec-manageme.md  feature-prd-tasks-ai.md  feature-spec-management-bobr-spec-list-show.md  feature-spec-sync-archive-merge-delta-specs-main-specs-b.md  feature-telegram-bot-status-backlog-notifications.md  improvement-bobr-init-ai-claude-md-bl-267e.md  improvement-bobr-init-ai-claude-md.md
.bobr/knowledge/: research-backlog-md.md  (+6 more)
.claude/: settings.json
plugin/: CLAUDE.md
tests/: conftest.py  test_cache.py  test_change.py  test_cli.py  test_context.py  test_ids.py  test_mcp.py  test_spec.py  test_storage.py  test_worktree.py
(+51 files in other folders)
